--- a/Hoja_de_calculo.html
+++ b/Hoja_de_calculo.html
@@ -61,7 +61,7 @@
     </table>
     <div>
         <ul class="ultimo">
-            <a href="https://github.com/kgarcia18/Prueba.1">
+            <a href="https://github.com/kgarcia18/Prueba1.3">
                 <b>Link de github</b>
             </a>
         </ul>
